--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: "I will take you on the fabulous world of exploration. Travel, cult
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
-google_analytics: 'UA-xxxxxxxx-1'
-disqus: 'demowebsite'
+# google_analytics: 'UA-xxxxxxxx-1'
+# disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
@@ -22,14 +22,14 @@ authors:
     web: https://www.wowthemes.net/donate/
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+  # john:
+  #   name: John
+  #   display_name: John    
+  #   avatar: 'assets/images/avatar.png'
+  #   email: wowthemesnet@gmail.com
+  #   web: https://www.wowthemes.net
+  #   twitter: https://twitter.com/wowthemesnet
+  #   description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
 # Plugins
 plugins:
