TO DO formspree

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
-email: yewlee456@gmail.com
+email: yewlee456@gmail.com #not working formspree
 
 # Authors
 authors:
