--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Stateless Malaysia"
 title: "ST-MY"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+description: "We believe that citizenship should not be exclusively proven via papers. Every Malaysians can be stateless, every stateless person can be Malaysian."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
