--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,22 @@ email: yewlee456@gmail.com #not working formspree
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    avatar: 'assets/images/avatar-sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
+  wyl:
+    name: Yew Lee, Wong
+    display_name: Yew Lee, Wong
+    avatar: 'assets/images/avatar-wyl.png'
+    email: yewlee456@gmail.com
+    web: http://yewlee.tech/
+    # twitter: https://twitter.com/wowthemesnet
+    description: "Co-Founder of Stateless Malaysia, stateless Malaysian."
+  han:
+    name: Zheng Han, Lim  
+    display_name: Zheng Han, Lim    
+    avatar: 'assets/images/avatar-han.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
+    facebook: https://facebook.com
     description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
 # Plugins
