--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ authors:
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
     facebook: https://facebook.com
+    instagram: https://instagram.com
     description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
 # Plugins
