done post module

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ authors:
     email: yewlee456@gmail.com
     web: http://yewlee.tech/
     # twitter: https://twitter.com/wowthemesnet
+    # facebook: https://facebook.com
+    # instagram: https://instagram.com
     description: "Co-Founder of Stateless Malaysia, stateless Malaysian."
   han:
     name: Zheng Han, Lim  
