--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "We believe that citizenship should not be exclusively proven via p
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
-# google_analytics: 'UA-xxxxxxxx-1'
+google_analytics: 'G-K2MT1WSBEY'
 # disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
