--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Stateless Malaysia"
 title: "ST-MY"
 description: "We believe that citizenship should not be exclusively proven via papers. Every Malaysians can be stateless, every stateless person can be Malaysian."
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/images/logo-01-01.jpeg'
+favicon: 'assets/images/logo-01-01.jpeg'
 baseurl: /
 google_analytics: 'G-K2MT1WSBEY'
 # disqus: 'demowebsite'
