enable socmed for wyl

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ authors:
     email: yewlee456@gmail.com
     web: http://yewlee.tech/
     # twitter: https://twitter.com/wowthemesnet
-    # facebook: https://facebook.com
-    # instagram: https://instagram.com
+    facebook: https://www.facebook.com/yewleew/
+    instagram: https://instagram.com/wongyewlee/
     description: "Co-Founder of Stateless.my, stateless Malaysian."
   han:
     name: Lim Zheng Han
