--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
     # twitter: https://twitter.com/wowthemesnet
     facebook: https://www.facebook.com/yewleew/
     instagram: https://instagram.com/wongyewlee/
-    description: "Co-Founder of Stateless.my, stateless Malaysian. Stateless by paper, Malaysian by heart."
+    description: "Convenor of Stateless.my, stateless Malaysian. Stateless by paper, Malaysian by heart."
   # han:
   #   name: Lim Zheng Han
   #   display_name: Lim Zheng Han   
