--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Stateless Malaysians - Stateless.my"
 title: "Stateless.my"
 description: "We believe that citizenship should not be exclusively proven via papers. Every Malaysians can be stateless, every stateless person can be Malaysian."
-logo: 'assets/images/logo-01-01.jpeg'
-favicon: 'assets/images/logo-01-01.jpeg'
+logo: 'assets/images/flag-2.png'
+favicon: 'assets/images/flag-2.png'
 baseurl: /
 google_analytics: 'G-K2MT1WSBEY'
 # disqus: 'demowebsite'
