fix website and image

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ authors:
     display_name: Wong Yew Lee
     avatar: 'assets/images/avatar-wyl.png'
     email: yewlee456@gmail.com
-    web: http://yewlee.tech/
+    web: http://cv.1906837.xyz/
     # twitter: https://twitter.com/wowthemesnet
     facebook: https://www.facebook.com/yewleew/
     instagram: https://instagram.com/wongyewlee/
