--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: "Stateless Malaysians - Stateless.my"
+name: "Stateless.my"
 title: "Stateless.my"
 description: "We believe that citizenship should not be exclusively proven via papers. Every Malaysians can be stateless, every stateless person can be Malaysian."
 logo: 'assets/images/flag-2.png'
